[package]
name = "claim_issuer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claim_issuer_lib"  

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.16.27"
solana-helper = "0.1.0"
identity = { path = "../identity",  features = ["no-entrypoint"] }
